# shelfedit

./: .gitignore  README.md  cursor_ai_video_editor_plan.md
.cursor/rules/: git-workflow.mdc  native-scrub-anti-patterns.mdc  preview-playback-architecture.mdc  shelfedit-ui-style.mdc
app/: .gitignore  CMakeLists.txt  README.md
app/src/: Bridge.cpp  Bridge.h  Log.h  MainWindow.cpp  MainWindow.h  MltController.cpp  MltController.h  Timeline.cpp  Timeline.h  VideoWidget.cpp  VideoWidget.h  main.cpp
app/web/: app.js  index.html  style.css
avplayer-scrub/: Package.swift  README.md  run.sh
avplayer-scrub/Sources/: main.swift
backend/: .env.example  requirements.txt
backend/app/: config.py  database.py  desktop.py  main.py  models.py  schemas.py
backend/app/routers/: ai.py  media.py  projects.py  render.py  timeline.py  transcript.py
backend/app/services/: ai_edit_service.py  media_service.py  render_service.py  transcription_service.py
backend/app/utils/: ffmpeg.py  hashing.py  paths.py
backend/app/workers/: job_runner.py
backend/tests/: conftest.py  test_ai_edit.py  test_media.py  test_projects.py  test_render.py  test_timeline.py  test_transcription.py
docs/: adamancia-style-example.html  adamancia-style.md  architecture.md  stop-points.md  timeline-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AgentWindow.tsx  AiChat.tsx  AssetsPanel.tsx  CreateProjectModal.tsx  ExportModal.tsx  ImportMediaModal.tsx  ProjectCard.tsx  ProjectDetail.tsx  Sidebar.tsx  Tracks.tsx
frontend/src/editor/: ClipView.tsx  EditorToolbar.tsx  Inspector.tsx  PreviewCanvas.tsx  TimelineToolbar.tsx  TimelineView.tsx  agentBridge.ts  chromaGL.ts  commands.ts  decodeWorker.ts  effects.ts  format.ts  previewEngine.ts  timeline.ts  useEditor.ts
frontend/src/styles/: app.css  global.css
native/: Cargo.toml  NATIVE_REWRITE.md  build.rs  run.sh
native/src/: app.rs  audio.rs  av_decode.m  avdecode.rs  commands.rs  compositor.rs  db.rs  decode.rs  editor.rs  main.rs  model.rs  monitor.rs  ops.rs  player.rs  preview.wgsl  render.rs  selftest.rs
swift-editor/: LAYOUT_PLAN.md  Package.swift  README.md  run.sh
swift-editor/Sources/: CompositionBuilder.swift  Database.swift  DesignSystem.swift  HomeView.swift  Main.swift  MetalVideoSurface.swift  Models.swift  TimelineDefaults.swift  TimelineView.swift  Utilities.swift  WorkspacePanels.swift
